--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swa');
-
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swa'); */
+@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
 :root {
     --background-body: #FFFFFF;
     --background-group-post: #F0F0F5; 
@@ -7,18 +7,28 @@
 }
 
 * {
-    font-family: "Playfair", serif;
+    font-family: "Handlee", serif;
     padding: 0;
     margin: 0;
+    /* outline: 1px solid red; */
+    max-height: 100vh;
+    max-width: 100vw; /* Evita que elementos ultrapassem a largura da tela */
+    box-sizing: border-box; /* Garante que margens e paddings não afetem o tamanho */
+
 }
 
 header {
+    margin-top: 30px;
     text-align: center;
+    font-weight: 400;
+    font-size: x-large;
+    font-style: italic;
+    letter-spacing: 5px;
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: var(--background-body);
 }
 
@@ -37,6 +47,7 @@ body {
 }
 
 .all-posts {
+    /* margin-top: 20px; */
     padding: 20px;
     width: 100vw;
     display: flex;
@@ -47,11 +58,26 @@ body {
 }
 
 .group-post{
-    padding: 20px;
-    width: 300px;
-    height: 400px;
+    margin: 20px;
+    padding: 30px;
+    width: 500px;
+    height: 600px;
     border-radius: 20px;
     background-color: var(--background-group-post);
+}
+
+.group-post h2 {
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight:lighter;
+    font-size: xx-large;
+    /* font-family: serif; */
+    
+}
+
+.group-post pre {
+    margin-top: 20px;
+    font-size:x-large;
 }
 
 footer {
