--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swa'); */
-@import url("https://fonts.googleapis.com/css2?family=Handlee&display=swap");
 :root {
     --background-body: #FFFFFF;
     --background-group-post: #F0F0F5; 
@@ -7,17 +5,18 @@
 }
 
 * {
-    font-family: "Handlee", serif;
+    font-family: 'Playfair Display', serif;
     padding: 0;
     margin: 0;
-    /* outline: 1px solid red; */
-    max-height: 100vh;
-    max-width: 100vw; /* Evita que elementos ultrapassem a largura da tela */
-    box-sizing: border-box; /* Garante que margens e paddings não afetem o tamanho */
-
+    /* max-height: 100vh; */
+    /* max-width: 100vw;  */
+    /* Evita que elementos ultrapassem a largura da tela */
+    /* box-sizing: border-box;  */
+    /* Garante que margens e paddings não afetem o tamanho */
 }
 
 header {
+    outline: 1px solid red;
     margin-top: 30px;
     text-align: center;
     font-weight: 400;
@@ -26,60 +25,37 @@ header {
     letter-spacing: 5px;
 }
 
-body {
-    height: 100%;
-    width: 100%;
-    background-color: var(--background-body);
-}
-
-.button-plus {
-    display: flex;
-    justify-content: right;
-    height: 40px;
-    /* background-color: aqua; */
-}
-
-.fa-solid {
-    font-size: 30px;
-    padding-right: 50px;
-    display: flex;
-    align-items: center;
-}
-
-.all-posts {
-    /* margin-top: 20px; */
-    padding: 20px;
-    width: 100vw;
-    display: flex;
-    align-content: space-between;
-    gap: 20px;
-    justify-content: center; /* alinha horizontalmente */
-    /* background-color: blueviolet; */
-}
-
-.group-post{
-    margin: 20px;
-    padding: 30px;
-    width: 500px;
-    height: 600px;
-    border-radius: 20px;
-    background-color: var(--background-group-post);
-}
-
-.group-post h2 {
-    text-align: center;
-    letter-spacing: 2px;
-    font-weight:lighter;
-    font-size: xx-large;
-    /* font-family: serif; */
-    
-}
-
-.group-post pre {
-    margin-top: 20px;
-    font-size:x-large;
+body{
+    outline: 1px solid blue;
+    max-height: 100vh;
+    max-width: 100vw; /* Evita que elementos ultrapassem a largura da tela */
+    box-sizing: border-box; /* Garante que margens e paddings não afetem o tamanho */
 }
 
 footer {
+    outline: 1px solid green;
     text-align: center;
+    max-width: 100vw;
+    max-height: 100vh;
+}
+
+.container {
+    outline: 1px solid yellow;
+    /* height: 100vh;
+    width: 100vw; */
+    display: flex;
+}
+
+.left-sidebar {
+    outline: 1px solid purple;
+    /* height: 100vh;
+    width: 100vw; */
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+}
+
+.space-poetry {
+    outline: 1px solid pink;
+    /* height: 100vh;
+    width: 100vw; */
 }
