--- a/templates/index.html
+++ b/templates/index.html
@@ -1,66 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/main.css" />
     <title>Fragmentos</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/styles.css">
 </head>
+
 <body>
     <div class="container">
-        <div class="sidebar">
-            Henrique Otogami
+        <div class="left-sidebar">
+            <h1>Henrique Otogami</h1>
         </div>
-        <div class="content">
-            <div class="add-button">
-                +
-            </div>
-            <h1>Fragmentos</h1>
-            <div class="grid">
-                <div class="card">
-                    <h2>Chove na quarta</h2>
-                    <p>
-                        Chove, pinga e goteja lá fora<br>
-                        Enquadra a chuva na janela<br>
-                        Fotografa os ventos correndo<br>
-                        Embaça o reflexo do vidro<br><br>
-                        Memórias, lembranças e saudade aqui dentro<br>
-                        Escrevo a dedo na janela<br>
-                        Gravo as palavras escorrendo<br>
-                        Embaça o poema no vidro
-                    </p>
-                </div>
-                <!-- Você pode duplicar esse bloco abaixo para mais cartões -->
-                <div class="card">
-                    <h2>Chove na quarta</h2>
-                    <p>
-                        Chove, pinga e goteja lá fora<br>
-                        Enquadra a chuva na janela<br>
-                        Fotografa os ventos correndo<br>
-                        Embaça o reflexo do vidro<br><br>
-                        Memórias, lembranças e saudade aqui dentro<br>
-                        Escrevo a dedo na janela<br>
-                        Gravo as palavras escorrendo<br>
-                        Embaça o poema no vidro
-                    </p>
-                </div>
-                <div class="card">
-                    <h2>Chove na quarta</h2>
-                    <p>
-                        Chove, pinga e goteja lá fora<br>
-                        Enquadra a chuva na janela<br>
-                        Fotografa os ventos correndo<br>
-                        Embaça o reflexo do vidro<br><br>
-                        Memórias, lembranças e saudade aqui dentro<br>
-                        Escrevo a dedo na janela<br>
-                        Gravo as palavras escorrendo<br>
-                        Embaça o poema no vidro
-                    </p>
-                </div>
-                <!-- Adicione quantos quiser -->
+        <div class="space-poetry">
+            <div class="aad-poetry">
+                <h1>+</h1>
             </div>
         </div>
     </div>
 </body>
+<footer>
+    <h2>Desenvolvido por Henrique Otogami - 2025</h2>
+</footer>
+
 </html>
