--- a/templates/index.html
+++ b/templates/index.html
@@ -9,19 +9,31 @@
 </head>
 
 <body>
+    <div class="title">
+        <h1>Fragmentos</h1>
+    </div>
     <div class="container">
         <div class="left-sidebar">
             <h1>Henrique Otogami</h1>
         </div>
-        <div class="space-poetry">
-            <div class="aad-poetry">
-                <h1>+</h1>
+        <div class="add-poetry">
+            <h1>+</h1>
+        </div>
+        <div class="grid-cards-poetry">
+            <div class="card-poetry">
+
+            </div>
+            <div class="card-poetry">
+
+            </div>
+            <div class="card-poetry">
+
             </div>
         </div>
     </div>
+    <footer>
+        <h2>Desenvolvido por Henrique Otogami - 2025</h2>
+    </footer>
 </body>
-<footer>
-    <h2>Desenvolvido por Henrique Otogami - 2025</h2>
-</footer>
 
 </html>
